--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,16 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "io.weichao.summary1704"
-        minSdkVersion 18
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 
-        externalNativeBuild {
-            cmake {
-                cppFlags "-frtti -fexceptions"
-            }
-        }
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags "-frtti -fexceptions"
+//            }
+//        }
     }
     buildTypes {
         release {
@@ -22,16 +22,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project(':library')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    // android 原生
+    // google 官方
+    compile 'com.google.android.exoplayer:exoplayer:r1.5.9'
+    // 其他
 }
