--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,12 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name="io.weichao.application.BaseApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
@@ -55,9 +58,6 @@
             android:screenOrientation="landscape" />
         <activity
             android:name="io.weichao.summary1704.activity.FaceDetectionActivity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name="io.weichao.summary1704.activity.AR3DActivity"
             android:screenOrientation="landscape" />
     </application>
 
