--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.idea
+build
+/library
+import-summary.txt
+local.properties
